@@ -31,7 +31,9 @@ import org.elasticsearch.script.ScriptService;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.watcher.ResourceWatcherService;
 import org.elasticsearch.xpack.core.ssl.X509KeyPairSettings;
+import org.elasticsearch.xpack.idp.action.PutSamlServiceProviderAction;
 import org.elasticsearch.xpack.idp.action.SamlInitiateSingleSignOnAction;
+import org.elasticsearch.xpack.idp.action.TransportPutSamlServiceProviderAction;
 import org.elasticsearch.xpack.idp.action.SamlMetadataAction;
 import org.elasticsearch.xpack.idp.action.SamlValidateAuthnRequestAction;
 import org.elasticsearch.xpack.idp.action.TransportSamlInitiateSingleSignOnAction;
@@ -44,6 +46,8 @@ import org.elasticsearch.xpack.idp.saml.idp.SamlIdentityProvider;
 import org.elasticsearch.xpack.idp.saml.idp.SamlIdentityProviderBuilder;
 import org.elasticsearch.xpack.idp.saml.support.SamlFactory;
 import org.elasticsearch.xpack.idp.saml.support.SamlInit;
+import org.elasticsearch.xpack.idp.saml.rest.action.RestPutSamlServiceProviderAction;
+import org.elasticsearch.xpack.idp.saml.sp.SamlServiceProviderIndex;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -77,9 +81,11 @@ public class IdentityProviderPlugin extends Plugin implements ActionPlugin {
 
         SamlInit.initialize();
         final SamlIdentityProvider idp = SamlIdentityProvider.builder().fromSettings(environment).build();
+        final SamlServiceProviderIndex index = new SamlServiceProviderIndex(client, clusterService);
         final SamlFactory factory = new SamlFactory();
         return List.of(
             idp,
+            index,
             factory
         );
     }
@@ -87,12 +93,13 @@ public class IdentityProviderPlugin extends Plugin implements ActionPlugin {
     @Override
     public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
         if (enabled == false) {
-            return Collections.emptyList();
+            return List.of();
         }
         return List.of(
             new ActionHandler<>(SamlInitiateSingleSignOnAction.INSTANCE, TransportSamlInitiateSingleSignOnAction.class),
             new ActionHandler<>(SamlValidateAuthnRequestAction.INSTANCE, TransportSamlValidateAuthnRequestAction.class),
-            new ActionHandler<>(SamlMetadataAction.INSTANCE, TransportSamlMetadataAction.class)
+            new ActionHandler<>(SamlMetadataAction.INSTANCE, TransportSamlMetadataAction.class),
+            new ActionHandler<>(PutSamlServiceProviderAction.INSTANCE, TransportPutSamlServiceProviderAction.class)
         );
     }
 
@@ -102,12 +109,14 @@ public class IdentityProviderPlugin extends Plugin implements ActionPlugin {
                                              IndexNameExpressionResolver indexNameExpressionResolver,
                                              Supplier<DiscoveryNodes> nodesInCluster) {
         if (enabled == false) {
-            return Collections.emptyList();
+            return List.of();
         }
         return List.of(
             new RestSamlInitiateSingleSignOnAction(),
             new RestSamlValidateAuthenticationRequestAction(),
-            new RestSamlMetadataAction());
+            new RestSamlMetadataAction(),
+            new RestPutSamlServiceProviderAction()
+        );
     }
 
     @Override
